Nav z-index fix

--- a/resources/sass/_components.scss
+++ b/resources/sass/_components.scss
@@ -25,7 +25,7 @@
   width: 100%;
   left: 0;
   top: 0;
-  z-index: 2;
+  z-index: 10;
 
   &__background {
     position: absolute;
